# my-rebuilding-project

./: .antigravityrules  AGENTS.md  README.md  read.md
.gemini/: styleguide.md
AI/SilverLink-AI/: .dockerignore  .gitignore  Dockerfile  Dockerfile.worker  GEMINI.md  MEDICATION_RAG_PIPELINE_GUIDE.md  OCR1_IMPLEMENTATION_PLAN.md  OCR_LLM_VALIDATION_GUIDE.md  OCR_PIPELINE_SUMMARY.md  README.md  README_SQS.md  call_history.txt  check_memory.py  check_vectordb.py  codex_phase4_local_memory_prompt.md  codex_phase4a_additional_instruction.md  docker-compose.yml  final.md  integration_test.py  ocr_roadmap.md  phase16A_prompt.md  pyproject.toml  pytest.ini  pythonToJava.py  requirements.txt  run_all.bat  run_api.bat  run_phase10_pipeline.bat  run_server.bat  run_worker.bat  test_db_connection.py  test_ocr_validation.py  worker_main.py
AI/SilverLink-AI/.github/: PULL_REQUEST_TEMPLATE.md
AI/SilverLink-AI/.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md
AI/SilverLink-AI/.github/workflows/: python-ci.yml
AI/SilverLink-AI/app/: main.py  websoket_twilio.py
AI/SilverLink-AI/docs/: OCR_PIPELINE_FLOW.md  admin_alias_e2e.md  chromadb_ops.md  drug_data_pipeline.md  ocr_ops.md  ocr_quality_comparison.md  ocr_quality_report.md
AI/SilverLink-AI/evaluation/: add_evaluation_columns.sql  evaluate_rag.py
AI/SilverLink-AI/mem_db/: meta.json
AI/SilverLink-AI/scripts/: .load_progress.json  analyze_ocr_quality.py  load_drug_data.py  seed_aliases.py  seed_test_alias.py
AI/SilverLink-AI/tests/: TEST_README.md  conftest.py  integration_test.py  requirements-test.txt
(+653 files in other folders)
